--- a/OpenTTDAdminPort/OpenTTDAdminPort.csproj
+++ b/OpenTTDAdminPort/OpenTTDAdminPort.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
     <PackageReference Include="RandomAnalyzers.RequiredMember" Version="1.0.0" />
     <PackageReference Include="RandomAnalyzers.RequiredMember.Analyzer" Version="1.0.0" />
   </ItemGroup>
