--- a/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
+++ b/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <DotNetCliToolReference Update="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
