--- a/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
+++ b/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\OpenTTDAdminPort\OpenTTDAdminPort.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="States\" />
+  </ItemGroup>
+
 </Project>
