fix: version suffix description

--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -42,7 +42,7 @@ on:
   workflow_dispatch:
     inputs:
       versionSuffix:
-        description: 'used to create pre-release packages'
+        description: 'Version suffix - used to create pre-release packages'
         required: false
         default: ''
 
