feat: publish nuget pckage by default is using version suffix

--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -44,7 +44,7 @@ on:
       createPrereleasePackage:
         description: 'type true to create prerelease package'
         required: false
-        default: 'false'
+        default: 'true'
 
 jobs:
 
