--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -93,6 +93,10 @@ jobs:
     - name: Create Packages 
       run: dotnet pack --version-suffix "$VERSION_SUFFIX" -c Release -o packages OpenTTDAdminPort/OpenTTDAdminPort.csproj
 
-    - name: Push packages to NuGet.org
+    - name: Push package to NuGet.org
       run: |
-        dotnet nuget push ./packages/OpenTTDAdminPort.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+        dotnet nuget push ./packages/Shoter.OpenTTD.AdminPort.*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
+
+    - name: Push symbols package to NuGet.org
+      run: |
+        dotnet nuget push ./packages/Shoter.OpenTTD.AdminPort.*.snupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
