--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -80,10 +80,10 @@ jobs:
         dotnet-version: '5.0.202'
 
     # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test
-      env:
-          CI: true
+    #- name: Execute unit tests
+    #  run: dotnet test
+    #  env:
+    #      CI: true
 
     - name: Set version suffix
       if: ${{ github.event.inputs.createPrereleasePackage == 'true'}}
@@ -95,8 +95,8 @@ jobs:
 
     - name: Push package to NuGet.org
       run: |
-        dotnet nuget push ./packages/Shoter.OpenTTD.AdminPort.*.nupkg -k "$NUGET_API_KEY" -s https://api.nuget.org/v3/index.json
+        dotnet nuget push ./packages/Shoter.OpenTTD.AdminPort.*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
 
     - name: Push symbols package to NuGet.org
       run: |
-        dotnet nuget push ./packages/Shoter.OpenTTD.AdminPort.*.snupkg -k "$NUGET_API_KEY" -ss  https://symbols.nuget.org/download/symbols
+        dotnet nuget push ./packages/Shoter.OpenTTD.AdminPort.*.snupkg -k ${{ secrets.NUGET_API_KEY }} -ss  https://symbols.nuget.org/download/symbols
