--- a/OpenTTDAdminPort/OpenTTDAdminPort.csproj
+++ b/OpenTTDAdminPort/OpenTTDAdminPort.csproj
@@ -23,12 +23,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <IgnoreDevDependencies Condition="'$(IgnoreDevDependencies)'==''">False</IgnoreDevDependencies>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="RandomAnalyzers.RequiredMember" Version="1.0.0" />
+    <PackageReference Include="RandomAnalyzers.RequiredMember" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <PropertyGroup Label="Release (ci-cd) nuget settings" Condition="'$(Configuration)' == 'Release'">
@@ -42,10 +41,4 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
   
-  
-  <ItemGroup Label="I do not need those inside my nuget dependencies. Too much dependencies is not good." Condition="'$(IgnoreDevDependencies)'=='False'">
-    <PackageReference Include="RandomAnalyzers.RequiredMember.Analyzer" Version="1.0.0" />
-  </ItemGroup>
-
-
 </Project>
