feat: add package for logging

--- a/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
+++ b/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Divergic.Logging.Xunit" Version="3.6.0" />
     <PackageReference Include="Docker.DotNet" Version="3.125.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
