--- a/OpenTTDAdminPort/OpenTTDAdminPort.csproj
+++ b/OpenTTDAdminPort/OpenTTDAdminPort.csproj
@@ -41,5 +41,9 @@
   <ItemGroup Label="Source link - dev only asset. It adds source link (https://github.com/dotnet/sourcelink) capabilities to the nuget package.">
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="OpenTTDAdminPort.Tests" />
+  </ItemGroup>
   
 </Project>
