feat: first test for AdminPortTcpClient

--- a/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
+++ b/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
@@ -19,6 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Akka.TestKit.Xunit2" Version="1.4.32" />
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="Divergic.Logging.Xunit" Version="3.6.0" />
     <PackageReference Include="Docker.DotNet" Version="3.125.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
@@ -42,7 +44,6 @@
 
   <ItemGroup>
     <Folder Include="Events\" />
-    <Folder Include="Networking\" />
   </ItemGroup>
 
   <ItemGroup>
