--- a/Examples/1_PingPong/1_PingPong.csproj
+++ b/Examples/1_PingPong/1_PingPong.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\OpenTTDAdminPort\OpenTTDAdminPort.csproj" />
   </ItemGroup>
 
