--- a/2_ChitChat/2_ChitChat.csproj
+++ b/2_ChitChat/2_ChitChat.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OpenTTDAdminPort\OpenTTDAdminPort.csproj" />
   </ItemGroup>
 
