--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -68,16 +68,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Install the .NET Core workload
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v1
+    - name: Install .NET 6
+      uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: 3.1.101
-
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1 
-      with:
-        dotnet-version: '5.0.202'
+        dotnet-version: 6.0.x
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
