--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,8 +73,9 @@ jobs:
       env:
           CI: true
 
-    - name: Upload unit Test result
+
     - uses: actions/checkout@master
-    - uses: codecov/codecov-action@v3
+    - name: Upload unit Test result
+      uses: codecov/codecov-action@v3
       with:
-          flags: unittests
+        flags: unittests
