chore; change root dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,4 +79,4 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         flags: unittests
-        directory: /home/runner/work/OpenTTDAdminPort/OpenTTDAdminPort
+        root_dir: /home/runner/work/OpenTTDAdminPort/OpenTTDAdminPort
