--- a/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
+++ b/OpenTTDAdminPort.Tests/OpenTTDAdminPort.Tests.csproj
@@ -22,10 +22,12 @@
     <PackageReference Include="Akka.TestKit.Xunit2" Version="1.4.32" />
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="Divergic.Logging.Xunit" Version="3.6.0" />
-    <PackageReference Include="Docker.DotNet" Version="3.125.4" />
+    <PackageReference Include="Docker.DotNet" Version="3.125.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="Testcontainers" Version="2.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
